🎉 Feat | Nuevo Dockerfile y Configuración de reserva sin GUI

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,4 +9,6 @@ services:
     container_name: reserva-casino
     restart: always
     ports:
-      - "3005:3005"
+      - "${APP_PORT}:${APP_PORT}"
+    env_file:
+      - .env
