:wrench: Fix | Sqlite Volume and readme

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,3 +12,5 @@ services:
       - "${APP_PORT}:${APP_PORT}"
     env_file:
       - .env
+    volumes:
+      - /data/database.sqlite:/data/database.sqlite
