--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,6 @@
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-APP_PORT=
+DATABASE_URL=""
+APP_PORT=3005
 
-MAIL_USER=
-MAIL_PASSWORD=
-TZ=
+MAIL_USER=""
+MAIL_PASSWORD=""
+TZ="America/Bogota"
