--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "joi": "^17.13.3",
+    "mailersend": "^2.3.0",
     "nodemailer": "^6.10.0",
     "nodemailer-smtp-transport": "^2.7.4",
     "pg": "^8.13.3",
