--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "reflect-metadata": "^0.2.2",
+    "resend": "^4.1.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
   },
